--- a/core/config/batchlauncher.cfg
+++ b/core/config/batchlauncher.cfg
@@ -44,3 +44,13 @@ advanced:
   rgb: False
   wavemovie: False
 }
+
+# Miscellaneous
+misc:
+{
+  # The path of the directory where the other output should be placed
+  path: None
+
+  fluxes: False
+  images: False
+}
