--- a/core/config/skirtlauncher.cfg
+++ b/core/config/skirtlauncher.cfg
@@ -37,3 +37,13 @@ advanced:
   rgb: False
   wavemovie: False
 }
+
+# Miscellaneous
+misc:
+{
+  # The path of the directory where the misc output should be placed
+  path: None
+
+  fluxes: False
+  images: False
+}
