--- a/core/config/skirtremotelauncher.cfg
+++ b/core/config/skirtremotelauncher.cfg
@@ -52,3 +52,13 @@ advanced:
   rgb: False
   wavemovie: False
 }
+
+# Miscellaneous
+misc:
+{
+   # The path of the directory where the miscellaneous output should be placed
+   path: None
+
+   fluxes: False
+   images: False
+}
