--- a/core/config/skirtlauncher.cfg
+++ b/core/config/skirtlauncher.cfg
@@ -3,49 +3,49 @@ arguments:
 {
 }
 
-# Extraction
-extraction:
+# Analysis options
+analysis:
 {
-  # The path of the directory where the extracted data should be placed
-  path: None
-  
-  progress: False
-  timeline: False
-  memory: False
-}
 
-# Plotting
-plotting:
-{
-  # The path of the directory where the plots should be placed
-  path: None
-  
-  seds: False
-  grids: False
-  
-  progress: False
-  timeline: False
-  memory: False
-}
+    # Extraction
+    extraction:
+    {
+      # The path of the directory where the extracted data should be placed
+      path: None
 
-# Advanced
-advanced:
-{
-  # The path of the directory where the images/movies should be placed
-  path: None
+      progress: False
+      timeline: False
+      memory: False
+    }
 
-  rgb: False
-  wavemovie: False
-}
+    # Plotting
+    plotting:
+    {
+      # The path of the directory where the plots should be placed
+      path: None
 
-# Miscellaneous
-misc:
-{
-  # The path of the directory where the misc output should be placed
-  path: None
+      seds: False
+      grids: False
 
-  fluxes: False
-  images: False
+      progress: False
+      timeline: False
+      memory: False
 
-  observation_filters: None
+      reference_sed: None
+    }
+
+    # Miscellaneous
+    misc:
+    {
+      # The path of the directory where the misc output should be placed
+      path: None
+
+      rgb: False
+      wave: False
+
+      fluxes: False
+      images: False
+
+      observation_filters: None
+    }
 }
