--- a/core/config/batchlauncher.cfg
+++ b/core/config/batchlauncher.cfg
@@ -10,49 +10,48 @@ shared_input: False
 # The types of output that should be retrieved for the simulation (None means everything should be downloaded)
 retrieve_types: None
 
-# Extraction
-extraction:
+# Analysis
+analysis:
 {
-  # The path of the directory where the extracted data should be placed
-  path: None
-  
-  progress: False
-  timeline: False
-  memory: False
-}
+    # Extraction
+    extraction:
+    {
+      # The path of the directory where the extracted data should be placed
+      path: None
 
-# Plotting
-plotting:
-{
-  # The path of the directory where the plots should be placed
-  path: None
-  
-  seds: False
-  grids: False
-  
-  progress: False
-  timeline: False
-  memory: False
-}
+      progress: False
+      timeline: False
+      memory: False
+    }
 
-# Advanced
-advanced:
-{
-  # The path of the directory where the images/movies should be placed
-  path: None
+    # Plotting
+    plotting:
+    {
+      # The path of the directory where the plots should be placed
+      path: None
 
-  rgb: False
-  wavemovie: False
-}
+      seds: False
+      grids: False
 
-# Miscellaneous
-misc:
-{
-  # The path of the directory where the other output should be placed
-  path: None
+      progress: False
+      timeline: False
+      memory: False
 
-  fluxes: False
-  images: False
+      reference_sed: None
+    }
 
-  observation_filters: None
+    # Miscellaneous
+    misc:
+    {
+      # The path of the directory where the other output should be placed
+      path: None
+
+      rgb: False
+      wave: False
+
+      fluxes: False
+      images: False
+
+      observation_filters: None
+    }
 }
