--- a/core/config/skirtremotelauncher.cfg
+++ b/core/config/skirtremotelauncher.cfg
@@ -18,49 +18,48 @@ arguments:
 {
 }
 
-# Extraction
-extraction:
+# Analysis options
+analysis:
 {
-  # The path of the directory where the extracted data should be placed
-  path: None
-  
-  progress: False
-  timeline: False
-  memory: False
-}
+    # Extraction
+    extraction:
+    {
+      # The path of the directory where the extracted data should be placed
+      path: None
 
-# Plotting
-plotting:
-{
-  # The path of the directory where the plots should be placed
-  path: None
-  
-  seds: False
-  grids: False
-  
-  progress: False
-  timeline: False
-  memory: False
-}
+      progress: False
+      timeline: False
+      memory: False
+    }
 
-# Advanced
-advanced:
-{
-  # The path of the directory where the images/movies should be placed
-  path: None
+    # Plotting
+    plotting:
+    {
+      # The path of the directory where the plots should be placed
+      path: None
 
-  rgb: False
-  wavemovie: False
-}
+      seds: False
+      grids: False
 
-# Miscellaneous
-misc:
-{
-   # The path of the directory where the miscellaneous output should be placed
-   path: None
+      progress: False
+      timeline: False
+      memory: False
 
-   fluxes: False
-   images: False
+      reference_sed: None
+    }
 
-   observation_filters: None
+    # Miscellaneous
+    misc:
+    {
+       # The path of the directory where the miscellaneous output should be placed
+       path: None
+
+       rgb: False
+       wave: False
+
+       fluxes: False
+       images: False
+
+       observation_filters: None
+    }
 }
