Many improvements in various classes

--- a/core/config/batchlauncher.cfg
+++ b/core/config/batchlauncher.cfg
@@ -10,6 +10,9 @@ shared_input: False
 # The types of output that should be retrieved for the simulation (None means everything should be downloaded)
 retrieve_types: None
 
+# The number of cores to use per process (if the parallelization is not specified by the user for a certain remote host)
+cores_per_process: 4
+
 # Analysis
 analysis:
 {
