--- a/core/config/batchlauncher.cfg
+++ b/core/config/batchlauncher.cfg
@@ -13,6 +13,9 @@ retrieve_types: None
 # The number of cores to use per process (if the parallelization is not specified by the user for a certain remote host)
 cores_per_process: 4
 
+# Group multiple simulations in one job
+group_simulations: False
+
 # Analysis
 analysis:
 {
