Calling prepare_image from the command line will now also set the calibration error and the galactic attenuation

--- a/modeling/config/imagepreparer.cfg
+++ b/modeling/config/imagepreparer.cfg
@@ -19,6 +19,9 @@ extraction:
 # Galactic extinction
 correct_for_extinction: True
 
+# The galactic attenuation
+attenuation: None
+
 # Unit conversion
 convert_unit: True
 unit_conversion:
