--- a/modeling/config/initialparameterexplorer.cfg
+++ b/modeling/config/initialparameterexplorer.cfg
@@ -1,6 +1,3 @@
-# Input path
-input_path: None
-
 # Output path
 output_path: None
 
@@ -30,3 +27,6 @@ dust:
     rel_max: 1.25
     scale: "linear"
 }
+
+# The remote host(s) to use for the initial parameter exploration
+remotes: ["nancy"] # only hosts that don't use a scheduling system!
