--- a/modeling/config/bestmodellauncher.cfg
+++ b/modeling/config/bestmodellauncher.cfg
@@ -17,7 +17,10 @@ wavelengths:
 }
 
 # The number of photon packages per wavelength
-packages: 1e7
+packages: 1e6 # before: 1e7
 
 # Whether dust self-absorption should be enabled
 selfabsorption: True
+
+# The remote host on which to run the simulations
+remote: "nancy"
