Implemented the AttenuationAnalyser and AttenuationPlotter that calculate and plot the attenuation curve for the best RT model

--- a/core/config/skirtremotelauncher.cfg
+++ b/core/config/skirtremotelauncher.cfg
@@ -61,6 +61,7 @@ analysis:
        images: False
 
        observation_filters: None
+       observation_instruments: None
     }
 
     timing_table_path: None
