--- a/core/config/batchlauncher.cfg
+++ b/core/config/batchlauncher.cfg
@@ -59,6 +59,7 @@ analysis:
       images: False
 
       observation_filters: None
+      observation_instruments: None
     }
 
     timing_table_path: None
