--- a/core/config/skirtlauncher.cfg
+++ b/core/config/skirtlauncher.cfg
@@ -47,6 +47,7 @@ analysis:
       images: False
 
       observation_filters: None
+      observation_instruments: None
     }
 
     timing_table_path: None
