The correct coordinate system is now added to the recreated observations, so that the ResidualAnalyser can rebin the images to the same coordinate system as the real observations

--- a/core/config/skirtlauncher.cfg
+++ b/core/config/skirtlauncher.cfg
@@ -48,6 +48,7 @@ analysis:
 
       observation_filters: None
       observation_instruments: None
+      images_wcs: None
     }
 
     timing_table_path: None
