--- a/core/config/skirtremotelauncher.cfg
+++ b/core/config/skirtremotelauncher.cfg
@@ -62,6 +62,7 @@ analysis:
 
        observation_filters: None
        observation_instruments: None
+       images_wcs: None
     }
 
     timing_table_path: None
