Put things in place to convert the unit of the images that are created during analysis of a SKIRT simulation

--- a/core/config/skirtremotelauncher.cfg
+++ b/core/config/skirtremotelauncher.cfg
@@ -63,6 +63,7 @@ analysis:
        observation_filters: None
        observation_instruments: None
        images_wcs: None
+       images_unit: None
     }
 
     timing_table_path: None
