--- a/magic/config/skysubtractor.cfg
+++ b/magic/config/skysubtractor.cfg
@@ -1,5 +1,9 @@
+
+# Options for sky annulus (based on principal galaxy ellipse)
 annulus_inner_factor: 1.0
 annulus_outer_factor: 3.0
+
+set_zero_outside: False
 
 # Sigma clipping
 sigma_clip_mask: True
@@ -24,9 +28,8 @@ histogram:
 estimate: True
 estimation:
 {
-  #method: "median"
-  #method: "mean"
-  method: "hybrid"
+  # The method used for the sky estimation
+  method: "photutils"
 
   # Downsample factor
   downsample_factor: 2*4  # (times image.fwhm)
