Implemented an absolutely superior way of estimating the sky and sky noise

--- a/magic/config/skysubtractor.cfg
+++ b/magic/config/skysubtractor.cfg
@@ -1,36 +1,53 @@
 
-# Options for sky annulus (based on principal galaxy ellipse)
-annulus_inner_factor: 1.0
-annulus_outer_factor: 3.0
+# Perform sigma-clipping step
+sigma_clip_mask: True
 
+# Estimate the sky (obviously)
+estimate: True
+
+# Set zero outside of the principal galaxy
 set_zero_outside: False
 
+# Eliminate negative values (replace them by zero)
+eliminate_negatives: False
+
+# Creation of the sky mask
+mask:
+{
+  # Options for sky annulus (based on principal galaxy ellipse)
+  annulus_inner_factor: 1.0
+  annulus_outer_factor: 3.0
+}
+
 # Sigma clipping
-sigma_clip_mask: True
 sigma_clipping:
 {
   sigma_level: 3.0
 }
 
-# Flags for writing
-write_result: True
-write_masked_frame: False
-write_statistics: False
-write_histogram: False
-
-# Histogram:
+# Histogram
 histogram:
 {
   log_scale: True
 }
 
 # Estimation
-estimate: True
 estimation:
 {
   # The method used for the sky estimation
-  method: "photutils"
+  method: "pts"
 
   # Downsample factor
   downsample_factor: 2*4  # (times image.fwhm)
 }
+
+# Setting zero outside
+zero_outside:
+{
+  factor: 2.0
+}
+
+# Flags for writing
+#write_masked_frame: False
+#write_statistics: False
+#write_histogram: False
