Sky subtraction through interpolatino

--- a/magic/config/skysubtractor.cfg
+++ b/magic/config/skysubtractor.cfg
@@ -39,6 +39,8 @@ estimation:
 
   # Downsample factor
   downsample_factor: 2*4  # (times image.fwhm)
+
+  finishing_step: None # can be None, "polynomial" or "interpolation"
 }
 
 # Setting zero outside
