--- a/magic/config/imagepreparer.cfg
+++ b/magic/config/imagepreparer.cfg
@@ -7,6 +7,10 @@ output_path: None
 # Write intermediate steps
 write_steps: False
 
+# Write sky annuli
+write_sky_annuli: False
+sky_annuli_path: None
+
 # Calculate calibration uncertainties
 calculate_calibration_uncertainties: True
 
