Added some things for visualisation of modeling steps

--- a/modeling/config/advancedparameterexplorer.cfg
+++ b/modeling/config/advancedparameterexplorer.cfg
@@ -7,6 +7,9 @@ simulations: 200
 # The remote hosts to use (None means all hosts that are configured in this PTS installation)
 remotes: None
 
+# Make visualisations
+visualise: False
+
 # Options for the young stellar population
 young_stars:
 {
