Made the source extraction much faster and much better

--- a/magic/config/sourceextractor.cfg
+++ b/magic/config/sourceextractor.cfg
@@ -1,5 +1,5 @@
 # Interpolation method
-interpolation_method: "biharmonic"
+interpolation_method: "pts"
 
 # Perform sigma-clipping when interpolating
 sigma_clip: True
