--- a/modeling/config/inputinitializer.cfg
+++ b/modeling/config/inputinitializer.cfg
@@ -24,3 +24,6 @@ packages: 2e5
 
 # Whether dust self-absorption should be enabled
 selfabsorption: False
+
+# The type of dust grid to be used
+dust_grid: "cartesian"
