--- a/modeling/config/inputinitializer.cfg
+++ b/modeling/config/inputinitializer.cfg
@@ -26,4 +26,4 @@ packages: 2e5
 selfabsorption: False
 
 # The type of dust grid to be used
-dust_grid: "cartesian"
+dust_grid: "bintree"  # other options: "octtree", "cartesian"
