New stuff and improvements in modeling/

--- a/core/config/batchlauncher.cfg
+++ b/core/config/batchlauncher.cfg
@@ -1,6 +1,9 @@
 # The remote host(s) to use
 remotes: None
 
+# The remote to use for the extra simulations
+extra_remote: None
+
 # Keep remote input and output
 keep: False
 
