A few additional features and improvements in magic/

--- a/magic/config/galaxyfinder.cfg
+++ b/magic/config/galaxyfinder.cfg
@@ -11,6 +11,9 @@ plot_track_record_if_exception: True
 # Find apertures
 find_apertures: True
 
+# The path to a region file with a contour for the principal galaxy
+principal_region: None
+
 # Aperture removal
 remove_apertures: False
 aperture_removal:
