Allow manually drawn regions to be used for the sky subtractor

--- a/magic/config/imagepreparer.cfg
+++ b/magic/config/imagepreparer.cfg
@@ -11,6 +11,9 @@ write_steps: False
 write_sky_annuli: False
 sky_annuli_path: None
 
+# Calculate poisson noise
+calculate_poisson_noise: False
+
 # Calculate calibration uncertainties
 calculate_calibration_uncertainties: True
 
