--- a/magic/config/imagepreparer.cfg
+++ b/magic/config/imagepreparer.cfg
@@ -12,7 +12,7 @@ write_sky_annuli: False
 sky_annuli_path: None
 
 # Calculate poisson noise
-calculate_poisson_noise: False
+calculate_poisson_noise: True
 
 # Calculate calibration uncertainties
 calculate_calibration_uncertainties: True
