--- a/magic/config/imagepreparer.cfg
+++ b/magic/config/imagepreparer.cfg
@@ -4,6 +4,9 @@ input_path: None
 # Output path
 output_path: None
 
+# The names of error planes to be included in the final error map
+error_frame_names: []
+
 # Write intermediate steps
 write_steps: False
 
