--- a/core/config/batchlauncher.cfg
+++ b/core/config/batchlauncher.cfg
@@ -19,6 +19,20 @@ cores_per_process: 4
 # Group multiple simulations in one job
 group_simulations: False
 
+# Timing and memory table path
+timing_table_path: None
+memory_table_path: None
+
+# Logging options
+logging:
+{
+    brief: False
+    verbose: False
+    memory: False
+    allocation: False
+    allocation_limit: 1e-5
+}
+
 # Analysis
 analysis:
 {
