--- a/core/config/batchlauncher.cfg
+++ b/core/config/batchlauncher.cfg
@@ -33,6 +33,10 @@ logging:
     allocation_limit: 1e-5
 }
 
+# Treat the specified paths for the simulation output directories and directories for analysis
+(plotting, extraction, misc) as relative to the ski file (the simulation directory)
+relative: False
+
 # Analysis
 analysis:
 {
