--- a/core/config/hosts/template.cfg
+++ b/core/config/hosts/template.cfg
@@ -1,14 +1,14 @@
 # Name or adress of the host
-name [required, str]: "nancy.ugent.be"
+name [required, str]: None
 
 # User name
-user [required, str]: "sjversto"
+user [required, str]: None
 
 # User password
-password [required, str]: "tokiotokio"
+password [required, str]: None
 
 # Password of public key used on the system to connect to the SKIRT/PTS private repositories
-ssh_password [required, str]: "tokiotokio"
+ssh_password [required, str]: None
 
 # Output directory for SKIRT simulations
 output_path [optional, str]: "~/SKIRT/run"
@@ -17,7 +17,7 @@ output_path [optional, str]: "~/SKIRT/run"
 scheduler [flag]: False
 
 # The MPI command for this remote
-mpi_command [required, str]: "mpirun"
+mpi_command [optional, str]: "mpirun"
 
 # This flag determines whether processes will be explicitly bound to cpus by adding the appropriate option to the mpi command
 force_process_binding [flag]: True
@@ -34,12 +34,14 @@ maximum_walltime [optional, float]: 36.
 # If a VPN connection is required to connect to this remote host
 vpn [section]:
 {
-    service [required, str]: "Ugent VPN"
-    user [required, str]: "sjversto"
-    password [required, str]: "ellen184"
+    service [required, str]: None
+    user [required, str]: None
+    password [required, str]: None
     secret [optional, str]: None
     
-    prompt_time_delay [optional, float]: 5. # time delay (in seconds) for when the password prompt is still shown (even though the password is specified here)
+    # time delay (in seconds) for when the password prompt is still shown (even though the password is specified here)
+    prompt_time_delay [optional, float]: 5.
     
-    not_for_dns_domain [optional, str]: "UGent.be" # the search domain of the DNS server for which, if connected to it, the VPN connection is not necessary
+    # the search domain of the DNS server for which, if connected to it, the VPN connection is not necessary
+    not_for_dns_domain [optional, str]: None
 }
