Some refactoring in configuration files

--- a/magic/config/imagepreparer.cfg
+++ b/magic/config/imagepreparer.cfg
@@ -5,7 +5,7 @@ input_path: None
 output_path: None
 
 # The names of error planes to be included in the final error map
-error_frame_names: []
+error_frame_names: None
 
 # Write intermediate steps
 write_steps: False
