--- a/magic/config_new/skysubtractor.cfg
+++ b/magic/config_new/skysubtractor.cfg
@@ -1,50 +1,50 @@
 # The path of a region file for the sky estimation
-sky_region: None
+sky_region [string]: None
 
 # Perform sigma-clipping step
-sigma_clip_mask: True
+sigma_clip_mask [boolean]: True
 
 # Estimate the sky (obviously)
-estimate: True
+estimate [boolean]: True
 
 # Set zero outside of the principal galaxy
-set_zero_outside: False
+set_zero_outside [boolean]: False
 
 # Eliminate negative values (replace them by zero)
-eliminate_negatives: False
+eliminate_negatives [boolean]: False
 
 # Creation of the sky mask
 mask:
 {
   # Options for sky annulus (based on principal galaxy ellipse)
-  annulus_inner_factor: 1.6
-  annulus_outer_factor: 4.0
+  annulus_inner_factor [real]: 1.6
+  annulus_outer_factor [real]: 4.0
 }
 
 # Sigma clipping
 sigma_clipping:
 {
-  sigma_level: 3.0
+  sigma_level [real]: 3.0
 }
 
 # Histogram
 histogram:
 {
-  log_scale: True
+  log_scale [boolean]: True
 }
 
 # Estimation
 estimation:
 {
   # The method used for the sky estimation
-  method: "pts"
+  method [string]: pts
 
   # Finishing step
-  finishing_step: None # can be None, "polynomial" or "interpolation"
+  finishing_step [string]: None # can be None, "polynomial" or "interpolation"
 }
 
 # Setting zero outside
 zero_outside:
 {
-  factor: 2.0
+  factor [real]: 2.0
 }
