Small enhancements in SourceFinder, ImagePreparer, SourceExtractor

--- a/magic/config/imagepreparer.cfg
+++ b/magic/config/imagepreparer.cfg
@@ -1,3 +1,17 @@
+# Input names
+input_names:
+{
+    image: None # must be required setting
+    galaxy_region: "galaxies.reg"
+    star_region: "stars.reg"
+    saturation_region: "saturation.reg"
+    other_region: "other_sources.reg"
+    galaxy_segments: "[segments.fits].segments.galaxies"
+    star_segments: "[segments.fits].segments.stars"
+    other_segments: "[other_sources.fits].segments.other_sources"
+    visualisation_path: None # optional
+}
+
 # Input path
 input_path: None
 
