--- a/magic/config/sourcefinder.cfg
+++ b/magic/config/sourcefinder.cfg
@@ -1,3 +1,14 @@
+# Input names
+input_names:
+{
+   image: None  # must be required option
+   galactic_catalog: None
+   stellar_catalog: None
+   special_region: "special.reg"
+   ignore_region: "ignore.reg"
+   bad_region: "bad.reg"
+}
+
 # Options for galaxy finder
 galaxies:
 {
