--- a/magic/config/sourceextractor.cfg
+++ b/magic/config/sourceextractor.cfg
@@ -6,3 +6,11 @@ sigma_clip: True
 
 # Outer factor
 source_outer_factor: 1.4
+
+# NEW
+dilate_saturation: False
+saturation_dilation_factor: 2.0
+
+# NEW
+dilate_other: False
+other_dilation_factor: 2.0
