--- a/magic/config/trainedfinder.cfg
+++ b/magic/config/trainedfinder.cfg
@@ -24,6 +24,11 @@ detection:
   # Options for segmentation
   segmentation:
   {
+    # The sigma level for sigma-clipping
+    clipping_sigma_level: 3.0
+
+    # The sigma level of detection
+    sigma_level: 3.0
   }
   
   # Options for SExtractor
