Various improvements in modeling/, especially important improvements in the ionizing- and young stellar map makers

--- a/magic/config/imagepreparer.cfg
+++ b/magic/config/imagepreparer.cfg
@@ -24,12 +24,9 @@ error_frame_names: None
 # Write intermediate steps
 write_steps: False
 
-# Write sky annuli
-write_sky_annuli: False
-sky_annuli_path: None
-
-# Calculate poisson noise
-calculate_poisson_noise: True
+# Write sky apertures (and annulus region)
+write_sky_apertures: False
+sky_apertures_path: None
 
 # Calculate calibration uncertainties
 calculate_calibration_uncertainties: True
