--- a/magic/config_new/imagepreparer.cfg
+++ b/magic/config_new/imagepreparer.cfg
@@ -10,12 +10,9 @@ error_frame_names [string_list]: None
 # Write intermediate steps
 write_steps [boolean]: False
 
-# Write sky annuli
-write_sky_annuli [boolean]: False
-sky_annuli_path [string]: None
-
-# Calculate poisson noise
-calculate_poisson_noise [boolean]: True
+# Write sky apertures (and annulus region)
+write_sky_apertures [boolean]: False
+sky_apertures_path [string]: None
 
 # Calculate calibration uncertainties
 calculate_calibration_uncertainties [boolean]: True
