Various improvements in modeling/

--- a/core/config/batchlauncher.cfg
+++ b/core/config/batchlauncher.cfg
@@ -23,6 +23,9 @@ group_simulations: False
 timing_table_path: None
 memory_table_path: None
 
+# Dry run (don't actually launch the simulations)
+dry: False
+
 # Logging options
 logging:
 {
@@ -81,8 +84,10 @@ analysis:
 
       observation_filters: None
       observation_instruments: None
+      make_images_remote: None
       images_wcs: None
       images_unit: None
+      images_kernels: None
     }
 
     timing_table_path: None
