Reorganizations and improvements in dustpedia and modeling

--- a/core/config/hosts/hpc.cfg
+++ b/core/config/hosts/hpc.cfg
@@ -25,6 +25,9 @@ use_hyperthreading [flag]: True
 # The modules that have to be loaded in order to be able to run SKIRT
 modules [fixed, string_list]: ["jobs", "lxml/3.4.2-intel-2015a-Python-2.7.9"]
 
+# The modules that have to be loaded in order to be able to install SKIRT
+installation_modules [fixed, string_list]: ["lxml/3.4.2-intel-2015a-Python-2.7.9", "Qt/5.2.1-intel-2015a"]
+
 # The maximum walltime for one job / screen session (in hours)
 maximum_walltime [fixed, float]: 12.
 
