--- a/core/config/hosts/nancy.cfg
+++ b/core/config/hosts/nancy.cfg
@@ -25,6 +25,9 @@ use_hyperthreading [flag]: True
 # The modules that have to be loaded in order to be able to run SKIRT
 modules [fixed, None]: None
 
+# The modules that have to be loaded in order to be able to install SKIRT
+installation_modules [fixed, None]: None
+
 # The maximum walltime for one job / screen session (in hours)
 maximum_walltime [optional, float]: 36.
 
