Bug fixes + complete incorporation of data parallel mode flags where necessary

--- a/core/config/batchlauncher.cfg
+++ b/core/config/batchlauncher.cfg
@@ -16,6 +16,9 @@ retrieve_types: None
 # The number of cores to use per process (if the parallelization is not specified by the user for a certain remote host)
 cores_per_process: 4
 
+# Whether to enable data parallelization mode (if the parallelization is not specified by the user of the batch launcher for a certain remote host)
+data_parallel: False
+
 # Group multiple simulations in one job
 group_simulations: False
 
