--- a/core/config/batchlauncher.cfg
+++ b/core/config/batchlauncher.cfg
@@ -22,6 +22,9 @@ data_parallel: False
 # Group multiple simulations in one job
 group_simulations: False
 
+# The preferred walltime per job of grouped simulations
+group_walltime: None
+
 # Timing and memory table path
 timing_table_path: None
 memory_table_path: None
