--- a/core/config/hosts/hpc.cfg
+++ b/core/config/hosts/hpc.cfg
@@ -29,7 +29,10 @@ modules [fixed, string_list]: ["jobs", "lxml/3.4.2-intel-2015a-Python-2.7.9"]
 installation_modules [fixed, string_list]: ["lxml/3.4.2-intel-2015a-Python-2.7.9", "Qt/5.2.1-intel-2015a"]
 
 # The maximum walltime for one job / screen session (in hours)
-maximum_walltime [fixed, float]: 12.
+maximum_walltime [fixed, float]: 72.
+
+# The preferred walltime for one job / screen session (in hours)
+preferred_walltime [optional, float]: 12.
 
 # Different possible clusters (only relevant for scheduling systems)
 clusters [section]:
