--- a/core/config/hosts/nancy.cfg
+++ b/core/config/hosts/nancy.cfg
@@ -29,7 +29,10 @@ modules [fixed, None]: None
 installation_modules [fixed, None]: None
 
 # The maximum walltime for one job / screen session (in hours)
-maximum_walltime [optional, float]: 36.
+maximum_walltime [fixed, None]: None
+
+# The preferred walltime for one job / screen session (in hours)
+preferred_walltime [optional, float]: 36.
 
 # If a VPN connection is required to connect to this remote host
 vpn [section]:
