--- a/core/config/hosts/template.cfg
+++ b/core/config/hosts/template.cfg
@@ -29,7 +29,10 @@ use_hyperthreading [flag]: True
 modules [optional, string_list]: None
 
 # The maximum walltime for one job / screen session (in hours)
-maximum_walltime [optional, float]: 36.
+maximum_walltime [optional, float]: None
+
+# The preferred walltime for one job / screen session (in hours)
+preferred_walltime [required, float]: None
 
 # If a VPN connection is required to connect to this remote host
 vpn [section]:
