--- a/core/config/hosts/hpc.cfg
+++ b/core/config/hosts/hpc.cfg
@@ -49,8 +49,10 @@ clusters [section]:
         
         # The number of cores per node
         # 2 x 8-core Intel E5-2670
-        cores [fixed, int]: 16
-        
+        #cores [fixed, int]: 16
+        sockets_per_node [fixed, int]: 2
+        cores_per_socket [fixed, int]: 8
+
         # The number of (hyper)threads per core
         # Intel E5-2670
         # Reference: http://ark.intel.com/products/64595/Intel-Xeon-Processor-E5-2670-20M-Cache-2_60-GHz-8_00-GTs-Intel-QPI
@@ -59,8 +61,8 @@ clusters [section]:
         # The amount of virtual memory per node (in GB)
         memory [fixed, float]: 32
         
-        # The number of NUMA domains
-        numa_domains [fixed, str]: None
+        # The number of NUMA domains per node
+        numa_domains_per_node [fixed, str]: None
         
         # Suited for multi-node communication (and thus multi-node jobs) 
         multi_node_communication [fixed, bool]: False
@@ -74,8 +76,10 @@ clusters [section]:
     
         # The number of cores per node
         # 2 x 8-core Intel E5-2670
-        cores [fixed, int]: 16
-        
+        #cores [fixed, int]: 16
+        sockets_per_node [fixed, int]: 2
+        cores_per_socket [fixed, int]: 8
+
         # The number of (hyper)threads per core
         # Intel E5-2670
         # Reference: http://ark.intel.com/products/64595/Intel-Xeon-Processor-E5-2670-20M-Cache-2_60-GHz-8_00-GTs-Intel-QPI
@@ -84,8 +88,8 @@ clusters [section]:
         # The amount of virtual memory per node (in GB)
         memory [fixed, float]: 64
         
-        # The number of NUMA domains
-        numa_domains [fixed, str]: None # unknown
+        # The number of NUMA domains per node
+        numa_domains_per_node [fixed, str]: None # unknown
         
         # Suited for multi-node communication (and thus multi-node jobs) 
         multi_node_communication [fixed, bool]: True
@@ -99,8 +103,10 @@ clusters [section]:
         
         # The number of cores per node
         # 2 x 12-core Intel E5-2680v3
-        cores [fixed, int]: 24
-        
+        #cores [fixed, int]: 24
+        sockets_per_node [fixed, int]: 2
+        cores_per_socket [fixed, int]: 12
+
         # The number of (hyper)threads per core
         # Intel E5-2680v3
         # Reference: http://ark.intel.com/products/81908/Intel-Xeon-Processor-E5-2680-v3-30M-Cache-2_50-GHz
@@ -110,8 +116,8 @@ clusters [section]:
         # yes this is actually 512 GB !
         memory [fixed, float]: 512
         
-        # The number of NUMA domains
-        numa_domains [fixed, str]: None
+        # The number of NUMA domains per node
+        numa_domains_per_node [fixed, str]: None
         
         # Suited for multi-node communication (and thus multi-node jobs) 
         multi_node_communication [fixed, bool]: True
@@ -125,8 +131,10 @@ clusters [section]:
         
         # The number of cores per node
         # 2 x 12-core Intel E5-2680v3
-        cores [fixed, int]: 24
-        
+        #cores [fixed, int]: 24
+        sockets_per_node [fixed, int]: 2
+        cores_per_socket [fixed, int]: 12
+
         # The number of (hyper)threads per core
         # Intel E5-2680v3
         # Reference: http://ark.intel.com/products/81908/Intel-Xeon-Processor-E5-2680-v3-30M-Cache-2_50-GHz
@@ -135,8 +143,8 @@ clusters [section]:
         # The amount of virtual memory per node (in GB)
         memory [fixed, float]: 64
         
-        # The number of NUMA domains
-        numa_domains [fixed, str]: None # unknown
+        # The number of NUMA domains per node
+        numa_domain_per_node [fixed, str]: None # unknown
         
         # Suited for multi-node communication (and thus multi-node jobs) 
         multi_node_communication [fixed, bool]: True
@@ -150,8 +158,10 @@ clusters [section]:
         
         # The number of cores per node
         # 2 x 10-core Intel E5-2660v3
-        cores [fixed, int]: 20
-        
+        #cores [fixed, int]: 20
+        sockets_per_node [fixed, int]: 2
+        cores_per_socket [fixed, int]: 10
+
         # The number of (hyper)threads per core
         # Intel E5-2660v3
         # Reference: http://ark.intel.com/products/81706/Intel-Xeon-Processor-E5-2660-v3-25M-Cache-2_60-GHz
@@ -160,8 +170,8 @@ clusters [section]:
         # The amount of virtual memory per node (in GB)
         memory [fixed, float]: 128
         
-        # The number of NUMA domains
-        numa_domains [fixed, str]: None # unknown
+        # The number of NUMA domains per node
+        numa_domains_per_node [fixed, str]: None # unknown
         
         # Suited for multi-node communication (and thus multi-node jobs) 
         multi_node_communication [fixed, bool]: True
