Many different additions, bug fixes and improvements in core/

--- a/core/config/hosts/template.cfg
+++ b/core/config/hosts/template.cfg
@@ -1,23 +1,23 @@
 # Name or adress of the host
-name [required, str]: None
+name [required, string]: None
 
 # User name
-user [required, str]: None
+user [required, string]: None
 
 # User password
-password [required, str]: None
+password [required, string]: None
 
 # Password of public key used on the system to connect to the SKIRT/PTS private repositories
-ssh_password [required, str]: None
+ssh_password [required, string]: None
 
 # Output directory for SKIRT simulations
-output_path [optional, str]: "~/SKIRT/run"
+output_path [optional, string]: "~/SKIRT/run"
 
 # Flag indicating whether this remote host uses a scheduling system
 scheduler [flag]: False
 
 # The MPI command for this remote
-mpi_command [optional, str]: "mpirun"
+mpi_command [optional, string]: "mpirun"
 
 # This flag determines whether processes will be explicitly bound to cpus by adding the appropriate option to the mpi command
 force_process_binding [flag]: True
@@ -29,22 +29,29 @@ use_hyperthreading [flag]: True
 modules [optional, string_list]: None
 
 # The maximum walltime for one job / screen session (in hours)
-maximum_walltime [optional, float]: None
+maximum_walltime [optional, real]: None
 
 # The preferred walltime for one job / screen session (in hours)
-preferred_walltime [required, float]: None
+preferred_walltime [required, real]: None
 
 # If a VPN connection is required to connect to this remote host
 vpn [section]:
 {
-    service [required, str]: None
-    user [required, str]: None
-    password [required, str]: None
-    secret [optional, str]: None
+    # Name of the VPN service
+    service [required, string]: None
     
-    # time delay (in seconds) for when the password prompt is still shown (even though the password is specified here)
-    prompt_time_delay [optional, float]: 5.
+    # Username for VPN
+    user [required, string]: None
     
-    # the search domain of the DNS server for which, if connected to it, the VPN connection is not necessary
-    not_for_dns_domain [optional, str]: None
+    # Password for VPN
+    password [required, string]: None
+    
+    # Secret (?) for VPN
+    secret [optional, string]: None
+    
+    # Time delay (in seconds) for when the password prompt is still shown (even though the password is specified here)
+    prompt_time_delay [optional, real]: 5.
+    
+    # Search domain of the DNS server for which, if connected to it, the VPN connection is not necessary
+    not_for_dns_domain [optional, string]: None
 }
