--- a/core/config/hosts/hpc.cfg
+++ b/core/config/hosts/hpc.cfg
@@ -1,23 +1,23 @@
 # Host name
-name [fixed, str]: "login.hpc.ugent.be"
+name [fixed, string]: "login.hpc.ugent.be"
 
 # User name
-user [required, str]: None
+user [required, string]: None
 
 # Password
-password [required, str]: None
+password [required, string]: None
 
 # Output directory for SKIRT simulations
-output_path [optional, str]: "$VSC_SCRATCH_DELCATTY/SKIRT"
+output_path [optional, string]: "$VSC_SCRATCH_DELCATTY/SKIRT"
 
 # Flag indicating whether this remote host uses a scheduling system
-scheduler [fixed, bool]: True
+scheduler [fixed, boolean]: True
 
 # The MPI command for this remote
-mpi_command [fixed, str]: "mympirun"
+mpi_command [fixed, string]: "mympirun"
 
 # This flag determines whether processes will be explicitly bound to cpus by adding the appropriate option to the mpi command
-force_process_binding [fixed, bool]: False
+force_process_binding [fixed, boolean]: False
 
 # Whether to use hyperthreading
 use_hyperthreading [flag]: True
@@ -29,166 +29,173 @@ modules [fixed, string_list]: ["jobs", "lxml/3.4.2-intel-2015a-Python-2.7.9"]
 installation_modules [fixed, string_list]: ["lxml/3.4.2-intel-2015a-Python-2.7.9", "Qt/5.2.1-intel-2015a"]
 
 # The maximum walltime for one job / screen session (in hours)
-maximum_walltime [fixed, float]: 72.
+maximum_walltime [fixed, real]: 72.
 
 # The preferred walltime for one job / screen session (in hours)
-preferred_walltime [optional, float]: 12.
+preferred_walltime [optional, real]: 12.
 
 # Different possible clusters (only relevant for scheduling systems)
 clusters [section]:
 {
     # The name of the default cluster
-    default [fixed, str]: "delcatty"
+    default [fixed, string]: "delcatty"
 
     # The RAICHU cluster
     # Reference: https://www.vscentrum.be/infrastructure/hardware/hardware-ugent
-    raichu [section]:
+    raichu [section]: # 2 x 8-core Intel E5-2670
     {
         # The number of computing nodes
-        nodes [fixed, int]: 64
+        nodes [fixed, integer]: 64
         
-        # The number of cores per node
-        # 2 x 8-core Intel E5-2670
-        #cores [fixed, int]: 16
-        sockets_per_node [fixed, int]: 2
-        cores_per_socket [fixed, int]: 8
+        # The number of sockets per node
+        sockets_per_node [fixed, integer]: 2
+        
+        # The number of cores per socket
+        cores_per_socket [fixed, integer]: 8
 
         # The number of (hyper)threads per core
         # Intel E5-2670
         # Reference: http://ark.intel.com/products/64595/Intel-Xeon-Processor-E5-2670-20M-Cache-2_60-GHz-8_00-GTs-Intel-QPI
-        threads_per_core [fixed, int]: 2
+        threads_per_core [fixed, integer]: 2
         
         # The amount of virtual memory per node (in GB)
-        memory [fixed, float]: 32
+        memory [fixed, real]: 32
         
         # The number of NUMA domains per node
-        numa_domains_per_node [fixed, str]: None
+        numa_domains_per_node [fixed, None]: None
         
         # Suited for multi-node communication (and thus multi-node jobs) 
-        multi_node_communication [fixed, bool]: False
+        multi_node_communication [fixed, boolean]: False
     }
 
     # The DELCATTY cluster
-    delcatty [section]:
+    delcatty [section]: # 2 x 8-core Intel E5-2670
     {
         # The number of computing nodes
-        nodes [fixed, int]: 160
+        nodes [fixed, integer]: 160
     
-        # The number of cores per node
-        # 2 x 8-core Intel E5-2670
-        #cores [fixed, int]: 16
-        sockets_per_node [fixed, int]: 2
-        cores_per_socket [fixed, int]: 8
+        # The number of sockets per node
+        sockets_per_node [fixed, integer]: 2
+        
+        # The number of cores per socket
+        cores_per_socket [fixed, integer]: 8
 
         # The number of (hyper)threads per core
         # Intel E5-2670
         # Reference: http://ark.intel.com/products/64595/Intel-Xeon-Processor-E5-2670-20M-Cache-2_60-GHz-8_00-GTs-Intel-QPI
-        threads_per_core [fixed, int]: 2
+        threads_per_core [fixed, integer]: 2
         
         # The amount of virtual memory per node (in GB)
-        memory [fixed, float]: 64
+        memory [fixed, real]: 64
         
         # The number of NUMA domains per node
-        numa_domains_per_node [fixed, str]: None # unknown
+        numa_domains_per_node [fixed, None]: None # unknown
         
         # Suited for multi-node communication (and thus multi-node jobs) 
-        multi_node_communication [fixed, bool]: True
+        multi_node_communication [fixed, boolean]: True
     }
     
     # The PHANPY cluster
-    phanpy [section]:
+    phanpy [section]: # 2 x 12-core Intel E5-2680v3
     {
         # The number of computing nodes
-        nodes [fixed, int]: 16
+        nodes [fixed, integer]: 16
         
-        # The number of cores per node
-        # 2 x 12-core Intel E5-2680v3
-        #cores [fixed, int]: 24
-        sockets_per_node [fixed, int]: 2
-        cores_per_socket [fixed, int]: 12
+        # The number of sockets per node
+        sockets_per_node [fixed, integer]: 2
+        
+        # The number of cores per socket
+        cores_per_socket [fixed, integer]: 12
 
         # The number of (hyper)threads per core
         # Intel E5-2680v3
         # Reference: http://ark.intel.com/products/81908/Intel-Xeon-Processor-E5-2680-v3-30M-Cache-2_50-GHz
-        threads_per_core [fixed, int]: 2
+        threads_per_core [fixed, integer]: 2
         
         # The amount of virtual memory per node (in GB)
         # yes this is actually 512 GB !
-        memory [fixed, float]: 512
+        memory [fixed, real]: 512
         
         # The number of NUMA domains per node
-        numa_domains_per_node [fixed, str]: None
+        numa_domains_per_node [fixed, None]: None
         
         # Suited for multi-node communication (and thus multi-node jobs) 
-        multi_node_communication [fixed, bool]: True
+        multi_node_communication [fixed, boolean]: True
     }
     
     # The GOLETT cluster
-    golett [section]:
+    golett [section]: # 2 x 12-core Intel E5-2680v3
     {
         # The number of computing nodes
-        nodes [fixed, int]: 200
+        nodes [fixed, integer]: 200
         
-        # The number of cores per node
-        # 2 x 12-core Intel E5-2680v3
-        #cores [fixed, int]: 24
-        sockets_per_node [fixed, int]: 2
-        cores_per_socket [fixed, int]: 12
+        # The number of sockets per node
+        sockets_per_node [fixed, integer]: 2
+        
+        # The number of cores per socket
+        cores_per_socket [fixed, integer]: 12
 
         # The number of (hyper)threads per core
         # Intel E5-2680v3
         # Reference: http://ark.intel.com/products/81908/Intel-Xeon-Processor-E5-2680-v3-30M-Cache-2_50-GHz
-        threads_per_core [fixed, int]: 2
+        threads_per_core [fixed, integer]: 2
         
         # The amount of virtual memory per node (in GB)
-        memory [fixed, float]: 64
+        memory [fixed, real]: 64
         
         # The number of NUMA domains per node
-        numa_domain_per_node [fixed, str]: None # unknown
+        numa_domain_per_node [fixed, string]: None # unknown
         
         # Suited for multi-node communication (and thus multi-node jobs) 
-        multi_node_communication [fixed, bool]: True
+        multi_node_communication [fixed, boolean]: True
     }
     
     # The SWALOT cluster
-    swalot [section]:
+    swalot [section]: # 2 x 10-core Intel E5-2660v3
     {
         # The number of computing nodes
-        nodes [fixed, int]: 128
+        nodes [fixed, integer]: 128
         
-        # The number of cores per node
-        # 2 x 10-core Intel E5-2660v3
-        #cores [fixed, int]: 20
-        sockets_per_node [fixed, int]: 2
-        cores_per_socket [fixed, int]: 10
+        # The number of sockets per node
+        sockets_per_node [fixed, integer]: 2
+        
+        # The number of cores per socket
+        cores_per_socket [fixed, integer]: 10
 
         # The number of (hyper)threads per core
         # Intel E5-2660v3
         # Reference: http://ark.intel.com/products/81706/Intel-Xeon-Processor-E5-2660-v3-25M-Cache-2_60-GHz
-        threads_per_core [fixed, int]: 2
+        threads_per_core [fixed, integer]: 2
         
         # The amount of virtual memory per node (in GB)
-        memory [fixed, float]: 128
+        memory [fixed, real]: 128
         
         # The number of NUMA domains per node
-        numa_domains_per_node [fixed, str]: None # unknown
+        numa_domains_per_node [fixed, None]: None # unknown
         
         # Suited for multi-node communication (and thus multi-node jobs) 
-        multi_node_communication [fixed, bool]: True
+        multi_node_communication [fixed, boolean]: True
     }
 }
 
 # If a VPN connection is required to connect to this remote host
 vpn [section]:
 {
-    service [required, str]: None
-    user [required, str]: None
-    password [required, str]: None
-    secret [optional, str]: None
+    # Name of the VPN service
+    service [required, string]: None
     
-    # time delay (in seconds) for when the password prompt is still shown (even though the password is specified here)
-    prompt_time_delay [optional, float]: 5.
+    # Username for VPN
+    user [required, string]: None
     
-    # the search domain of the DNS server for which, if connected to it, the VPN connection is not necessary
-    not_for_dns_domain [fixed, str]: "UGent.be"
+    # Password for VPN
+    password [required, string]: None
+    
+    # Secret (?) for VPN
+    secret [optional, string]: None
+    
+    # Time delay (in seconds) for when the password prompt is still shown (even though the password is specified here)
+    prompt_time_delay [optional, real]: 5.
+    
+    # Search domain of the DNS server for which, if connected to it, the VPN connection is not necessary
+    not_for_dns_domain [fixed, string]: "UGent.be"
 }
