--- a/core/config/hosts/nancy.cfg
+++ b/core/config/hosts/nancy.cfg
@@ -1,23 +1,23 @@
 # Host name
-name [fixed, str]: "nancy.ugent.be"
+name [fixed, string]: "nancy.ugent.be"
 
 # User name
-user [required, str]: None
+user [required, string]: None
 
 # Password
-password [required, str]: None
+password [required, string]: None
 
 # Output directory for SKIRT simualations
-output_path [optional, str]: "~/SKIRT/run"
+output_path [optional, string]: "~/SKIRT/run"
 
 # Flag indicating whether this remote host uses a scheduling system
-scheduler [fixed, bool]: False
+scheduler [fixed, boolean]: False
 
 # The MPI command for this remote
-mpi_command [fixed, str]: "mpirun"
+mpi_command [fixed, string]: "mpirun"
 
 # This flag determines whether processes will be explicitly bound to cpus by adding the appropriate option to the mpi command
-force_process_binding [fixed, bool]: True
+force_process_binding [fixed, boolean]: True
 
 # Whether to use hyperthreading
 use_hyperthreading [flag]: True
@@ -32,17 +32,26 @@ installation_modules [fixed, None]: None
 maximum_walltime [fixed, None]: None
 
 # The preferred walltime for one job / screen session (in hours)
-preferred_walltime [optional, float]: 36.
+preferred_walltime [optional, real]: 36.
 
 # If a VPN connection is required to connect to this remote host
 vpn [section]:
 {
-    service [required, str]: None
-    user [required, str]: None
-    password [required, str]: None
-    secret [optional, str]: None
+    # Name of the VPN service
+    service [required, string]: None
     
-    prompt_time_delay [optional, float]: 5. # time delay (in seconds) for when the password prompt is still shown (even though the password is specified here)
+    # Username for VPN
+    user [required, string]: None
     
-    not_for_dns_domain [fixed, str]: "UGent.be" # the search domain of the DNS server for which, if connected to it, the VPN connection is not necessary
+    # Password for VPN
+    password [required, string]: None
+    
+    # Secret (?) for VPN
+    secret [optional, string]: None
+    
+    # Time delay (in seconds) for when the password prompt is still shown (even though the password is specified here)
+    prompt_time_delay [optional, real]: 5.
+    
+    # Search domain of the DNS server for which, if connected to it, the VPN connection is not necessary
+    not_for_dns_domain [fixed, string]: "UGent.be"
 }
