Various improvements in core/

--- a/core/config/hosts/nancy.cfg
+++ b/core/config/hosts/nancy.cfg
@@ -1,5 +1,5 @@
 # Host name
-name [fixed, string]: "nancy.ugent.be"
+name [fixed, string]: nancy.ugent.be
 
 # User name
 user [required, string]: None
@@ -8,13 +8,13 @@ user [required, string]: None
 password [required, string]: None
 
 # Output directory for SKIRT simualations
-output_path [optional, string]: "~/SKIRT/run"
+output_path [optional, string]: ~/SKIRT/run
 
 # Flag indicating whether this remote host uses a scheduling system
 scheduler [fixed, boolean]: False
 
 # The MPI command for this remote
-mpi_command [fixed, string]: "mpirun"
+mpi_command [fixed, string]: mpirun
 
 # This flag determines whether processes will be explicitly bound to cpus by adding the appropriate option to the mpi command
 force_process_binding [fixed, boolean]: True
@@ -53,5 +53,5 @@ vpn [section]:
     prompt_time_delay [optional, real]: 5.
     
     # Search domain of the DNS server for which, if connected to it, the VPN connection is not necessary
-    not_for_dns_domain [fixed, string]: "UGent.be"
+    not_for_dns_domain [fixed, string]: UGent.be
 }
