--- a/core/config/hosts/template.cfg
+++ b/core/config/hosts/template.cfg
@@ -11,13 +11,13 @@ password [required, string]: None
 ssh_password [required, string]: None
 
 # Output directory for SKIRT simulations
-output_path [optional, string]: "~/SKIRT/run"
+output_path [optional, string]: ~/SKIRT/run
 
 # Flag indicating whether this remote host uses a scheduling system
 scheduler [flag]: False
 
 # The MPI command for this remote
-mpi_command [optional, string]: "mpirun"
+mpi_command [optional, string]: mpirun
 
 # This flag determines whether processes will be explicitly bound to cpus by adding the appropriate option to the mpi command
 force_process_binding [flag]: True
