--- a/core/config/hosts/hpc.cfg
+++ b/core/config/hosts/hpc.cfg
@@ -1,5 +1,5 @@
 # Host name
-name [fixed, string]: "login.hpc.ugent.be"
+name [fixed, string]: login.hpc.ugent.be
 
 # User name
 user [required, string]: None
@@ -8,13 +8,13 @@ user [required, string]: None
 password [required, string]: None
 
 # Output directory for SKIRT simulations
-output_path [optional, string]: "$VSC_SCRATCH_DELCATTY/SKIRT"
+output_path [optional, string]: $VSC_SCRATCH_DELCATTY/SKIRT
 
 # Flag indicating whether this remote host uses a scheduling system
 scheduler [fixed, boolean]: True
 
 # The MPI command for this remote
-mpi_command [fixed, string]: "mympirun"
+mpi_command [fixed, string]: mympirun
 
 # This flag determines whether processes will be explicitly bound to cpus by adding the appropriate option to the mpi command
 force_process_binding [fixed, boolean]: False
@@ -38,7 +38,7 @@ preferred_walltime [optional, real]: 12.
 clusters [section]:
 {
     # The name of the default cluster
-    default [fixed, string]: "delcatty"
+    default [fixed, string]: delcatty
 
     # The RAICHU cluster
     # Reference: https://www.vscentrum.be/infrastructure/hardware/hardware-ugent
@@ -197,5 +197,5 @@ vpn [section]:
     prompt_time_delay [optional, real]: 5.
     
     # Search domain of the DNS server for which, if connected to it, the VPN connection is not necessary
-    not_for_dns_domain [fixed, string]: "UGent.be"
+    not_for_dns_domain [fixed, string]: UGent.be
 }
