--- a/core/config/hosts/nancy.cfg
+++ b/core/config/hosts/nancy.cfg
@@ -55,3 +55,6 @@ vpn [section]:
     # Search domain of the DNS server for which, if connected to it, the VPN connection is not necessary
     not_for_dns_domain [fixed, string]: UGent.be
 }
+
+# Port to be used for the connection
+port [fixed, integer]: 2935
