--- a/core/config/hosts/peggy.cfg
+++ b/core/config/hosts/peggy.cfg
@@ -1,38 +1,38 @@
-# Name or adress of the host
-name [required, string]: None
+# Host name
+name [fixed, string]: peggy.ugent.be
 
 # User name
 user [required, string]: None
 
-# User password
+# Password
 password [required, string]: None
 
-# Password of public key used on the system to connect to the SKIRT/PTS private repositories
-ssh_password [required, string]: None
-
-# Output directory for SKIRT simulations
+# Output directory for SKIRT simualations
 output_path [optional, string]: ~/SKIRT/run
 
 # Flag indicating whether this remote host uses a scheduling system
-scheduler [flag]: False
+scheduler [fixed, boolean]: False
 
 # The MPI command for this remote
-mpi_command [optional, string]: mpirun
+mpi_command [fixed, string]: mpirun
 
 # This flag determines whether processes will be explicitly bound to cpus by adding the appropriate option to the mpi command
-force_process_binding [flag]: True
+force_process_binding [fixed, boolean]: True
 
 # Whether to use hyperthreading
 use_hyperthreading [flag]: True
 
 # The modules that have to be loaded in order to be able to run SKIRT
-modules [optional, string_list]: None
+modules [fixed, None]: None
+
+# The modules that have to be loaded in order to be able to install SKIRT
+installation_modules [fixed, None]: None
 
 # The maximum walltime for one job / screen session (in hours)
-maximum_walltime [optional, real]: None
+maximum_walltime [fixed, None]: None
 
 # The preferred walltime for one job / screen session (in hours)
-preferred_walltime [required, real]: None
+preferred_walltime [optional, real]: 36.
 
 # If a VPN connection is required to connect to this remote host
 vpn [section]:
@@ -53,8 +53,8 @@ vpn [section]:
     prompt_time_delay [optional, real]: 5.
     
     # Search domain of the DNS server for which, if connected to it, the VPN connection is not necessary
-    not_for_dns_domain [optional, string]: None
+    not_for_dns_domain [fixed, string]: UGent.be
 }
 
 # Port to be used for the connection
-port [optional, integer]: None
+port [fixed, None]: None
