--- a/core/config/hosts/cindy.cfg
+++ b/core/config/hosts/cindy.cfg
@@ -8,7 +8,7 @@ user [required, string]: None
 password [required, string]: None
 
 # Output directory for SKIRT simualations
-output_path [optional, string]: ~/SKIRT/run
+output_path [optional, string]: None
 
 # Flag indicating whether this remote host uses a scheduling system
 scheduler [fixed, boolean]: False
