--- a/core/config/hosts/hpc.cfg
+++ b/core/config/hosts/hpc.cfg
@@ -202,3 +202,6 @@ vpn [section]:
 
 # Port to be used for the connection
 port [fixed, None]: None
+
+# Name of private/public key pair necessary for connection (instead of password)
+key [required, string]: None
