--- a/core/config/hosts/nancy.cfg
+++ b/core/config/hosts/nancy.cfg
@@ -58,3 +58,6 @@ vpn [section]:
 
 # Port to be used for the connection
 port [fixed, integer]: 2935
+
+# Name of private/public key pair necessary for connection (instead of password)
+key [optional, string]: None
