--- a/core/config/hosts/template.cfg
+++ b/core/config/hosts/template.cfg
@@ -58,3 +58,6 @@ vpn [section]:
 
 # Port to be used for the connection
 port [optional, integer]: None
+
+# Name of private/public key pair necessary for connection (instead of password)
+key [optional, string]: None
