Bug fixes and improvements

--- a/core/config/hosts/hpc.cfg
+++ b/core/config/hosts/hpc.cfg
@@ -7,6 +7,9 @@ user [required, string]: None
 # Password
 password [required, string]: None
 
+# Output directory for lots of (temporary) data
+scratch_path [optional, string]: $VSC_SCRATCH_DELCATTY
+
 # Output directory for SKIRT simulations
 output_path [optional, string]: $VSC_SCRATCH_DELCATTY/SKIRT
 
