--- a/core/config/hosts/peggy.cfg
+++ b/core/config/hosts/peggy.cfg
@@ -7,7 +7,10 @@ user [required, string]: None
 # Password
 password [required, string]: None
 
-# Output directory for SKIRT simualations
+# Output directory for lots of (temporary) data
+scratch_path [optional, string]: $VSC_SCRATCH_DELCATTY
+
+# Output directory for SKIRT simulations
 output_path [optional, string]: None
 
 # Flag indicating whether this remote host uses a scheduling system
