--- a/core/config/hosts/template.cfg
+++ b/core/config/hosts/template.cfg
@@ -10,6 +10,9 @@ password [required, string]: None
 # Password of public key used on the system to connect to the SKIRT/PTS private repositories
 ssh_password [required, string]: None
 
+# Output directory for lots of (temporary) data
+scratch_path [optional, string]: None
+
 # Output directory for SKIRT simulations
 output_path [optional, string]: ~/SKIRT/run
 
